[package]
name = "rusty-daw-midi"
version = "0.0.0"
authors = ["Billy Messenger <BillyDM@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["audio", "daw"]
categories = ["multimedia::audio"]
description = "MIDI handling for RustyDAW projects (placeholder)"
documentation = "https://docs.rs/rusty-daw-midi"
repository = "https://github.com/RustyDAW/rusty-daw-midi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
